--- a/public/style.css
+++ b/public/style.css
@@ -6,8 +6,10 @@ header{
   background-color: #425955;
   font-family: 'Montserrat', sans-serif;
   color: #F4F7D9;
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-bottom: 5px;
   margin: 2%;
-  width: auto;
 }
 
 header>h1 {
@@ -23,7 +25,7 @@ header>h2{
   font-size: 40px;
 }
 
-article{
+form{
  text-align: center;
 }
 
@@ -32,6 +34,9 @@ footer{
   font-family: 'Montserrat', sans-serif;
   color: #F4F7D9;
   font-size: 40px;
+  padding-left: 20%;
+  padding-right: 20%;
+  padding-bottom: 5px;
 }
 
 a { color: #F4F7D9;
