--- a/public/style.css
+++ b/public/style.css
@@ -25,7 +25,7 @@ h2{
 
 }
 
-.embed {
+.embed-container {
     position: relative;
     padding: 0;
     padding-bottom: 56.25%; /* 16:9 ratio*/
@@ -33,6 +33,15 @@ h2{
     overflow: hidden;
 }
 
+.embed-container iframe,
+.embed-container object,
+.embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 
 section {
   vertical-align: center;
