--- a/public/style.css
+++ b/public/style.css
@@ -6,15 +6,17 @@ body {
 header{
   background-color: #425955;
   font-family: 'Montserrat', sans-serif;
-  color: #FFFFFF;
+  color: #F4F7D9;
+  border-radius: 10px 10px 10px 10px;
+  border-color: 1px solid
 }
-
 
 h1{
   font-size: 50px;
+  color: #F4F7D9;
   width: 50%;
   margin: 1px, 1px, 1px, 1px;
-
+  text-shadow: 2px 2px 2px #000000
 
 }
 
@@ -22,7 +24,8 @@ h2{
   font-size: 50px;
   width: 50%;
   margin: 1px, 1px, 1px, 1px;
-
+  text-shadow: 2px 2px 2px #000000;
+  font-weight: 295;
 }
 
 .embed-container {
@@ -37,7 +40,8 @@ h2{
 .embed-container object,
 .embed-container embed {
   position: absolute;
-  top: 0;
+  top: 3px;
+  bottom: 3px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -51,39 +55,43 @@ form{
  text-align: center;
 }
 
+
 footer{
   background-color: #425955;
   font-family: 'Montserrat', sans-serif;
-  color: #FFFFFF;
+  color: #F4F7D9;
   font-size: 25px;
+  text-shadow: 2px 2px 2px #000000;
+  border-radius: 10px 10px 10px 10px;
+  border-color: 1px solid
 }
 
-footer.page_footer{
-  padding-top: 5px;
-  padding-left: 20%;
-  padding-right: 15%;
-  padding-bottom: 5px;
-  margin-left: -10px;
-  margin-top: 75px;
+.twelve.column input{
+  background-color: #ffffff;
 }
 
 p{
-  color: white;
+  color: #F4F7D9;
+  font-size: 30px;
+  text-align: center;
 }
 
+input{
+  padding-top: 10px;
+}
 article{
   position: block;
   color: white;
 }
 
-a { color: #FFFFFF;
+a { color: #F4F7D9;
   text-decoration: none;
   margin-right: 65px;
 }
 a:visited { color: #FFFFFF;
   text-decoration: none;
 }
-a:hover { color: #FFFFFF;
+a:hover { color: #F4F7D9;
   text-decoration: none;
 }​
 
