--- a/public/skeleton.css
+++ b/public/skeleton.css
@@ -379,6 +379,15 @@ hr {
   border-width: 0;
   border-top: 1px solid #E1E1E1; }
 
+img.medium {
+    width: 200px;
+    height: 200px; }
+img.small {
+    width: 100px;
+    height: 100px; }
+ img.large {
+    width: 500px;
+    height: 400px; }
 
 /* Clearing
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
