--- a/public/style.css
+++ b/public/style.css
@@ -77,6 +77,12 @@ a:visited { color: #FFFFFF;
 a:hover { color: #FFFFFF;
   text-decoration: none;
 }​
-
+img.medium {
+    width: 200px;
+    height: 200px;}
+  img.small {
+    width: 100px;
+    height: 100px;
+  }
 
 
